# flappy_bird_fresh

./: Cargo.toml  LLVM_INVESTIGATION.md  memory.x
.cargo/: config.toml
src/: clock.rs  color.rs  config.rs  display.rs  draw.rs  game.rs  i2c.rs  input_device.rs  lcd.rs  lcd_spi.rs  main.rs  mpu6050.rs  player.rs  sdram.rs
src/assets/: assets.rs  fonts.rs  mod.rs
